2.38 "" (released xx.xx.xxxx)

  * Remove literal "</script>" in embedded JavaScript files.
    Type: bugfix
    Changed: wc/js/__init__.py

  * Correctly use open file descriptor when writing new folder rules.
    Type: bugfix
    Changed: wc/webgui/context/filterconfig_html.py,
      wc/filter/rules/FolderRule.py

  * Dont use unsupported iterkeys() on form object.
    Type: bugfix
    Changed: wc/webgui/context/config_html.py

2.37.1 "True Romance" (released 17.2.2006, windows-only fixes)

  * Quote command line arguments when installing under Windows.
    Type: bugfix
    Changed: install-webcleaner.py

  * Regularly check for service stop on Windows, fixes the stalled
    service shutdown bug.
    Type: bugfix
    Changed: wc/proxy/mainloop.py

2.37 "Mystic River" (released 9.2.2006)

  * Improve redirection test by stripping optional quotes from
    the redirection URL and also allow https:// redirects.
    Type: bugfix
    Changed: wc/filter/html/HtmlSecurity.py

  * Fix rule matching for enclosed text.
    Type: bugfix
    Changed: wc/filter/rules/HtmlrewriteRule.py

  * Allow hostname to carry suffixes that control WebCleaner
    behaviour, particularly disable certain filter modules.
    Type: feature
    Changed: wc/proxy/HttpClient.py, wc/filter/__init__.py

  * Make use of wc-nofilter host suffix to allow viewing of blocked
    sites.
    Type: feature
    Changed: templates/classic/blocked.html

  * Allow floating point values for width/height HTML attributes,
    but convert them to integers.
    Type: feature
    Changed: wc/filter/html/HtmlSecurity.py

  * The list of pending events is now stored in a heap instead of
    a manually sorted list. This is slightly faster (if the _heapq
    C module is available that is).
    Type: Optimization
    Changed: wc/proxy/timer.py

  * Updated spidermonkey JavaScript library from upstream CVS as of
    20060209.
    Type: feature
    Changed: libjs/*

2.36 "The Aristocrats" (released 9.1.2006)
